Fork the original project to trouter-paths
* Remove the HTTP verb from the interface
* Add a UMD script for browsers
* Add code coverage check
* Add benchmarks for trouter and wayfarer

--- a/bench/package.json
+++ b/bench/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
-    "benchmark": "^2.1.4"
+    "benchmark": "2.1.4",
+    "trouter": "3.1.0",
+    "wayfarer": "7.0.1"
   }
 }
