--- a/package.json
+++ b/package.json
@@ -1,40 +1,100 @@
 {
-  "name": "trouter",
-  "version": "3.1.0",
-  "repository": "lukeed/trouter",
-  "description": "🐟 A fast, small-but-mighty, familiar ~fish~ router",
-  "module": "index.mjs",
-  "main": "index.js",
-  "license": "MIT",
-  "files": [
-    "index.js",
-    "index.mjs"
-  ],
+  "name": "trouter-paths",
+  "version": "1.2.0",
+  "description": "A fast, small-but-mighty, familiar ~fish~ router for paths only",
+  "homepage": "https://github.com/prantlf/trouter-paths",
   "author": {
-    "name": "Luke Edwards",
-    "email": "luke.edwards05@gmail.com",
-    "url": "lukeed.com"
+    "name": "Ferdinand Prantl",
+    "email": "prantlf@gmail.com",
+    "url": "https://github.com/prantlf"
   },
-  "engines": {
-    "node": ">=6"
+  "contributors": [
+    {
+      "name": "Luke Edwards",
+      "email": "luke.edwards05@gmail.com",
+      "url": "lukeed.com"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prantlf/trouter-paths.git"
   },
-  "scripts": {
-    "bench": "node bench",
-    "prepack": "bundt index.mjs",
-    "test": "tape -r esm test/*.js | tap-spec"
+  "bugs": {
+    "url": "https://github.com/prantlf/trouter-paths/issues"
   },
+  "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/prantlf/trouter-paths/blob/master/license.md"
+    }
+  ],
   "keywords": [
     "route",
     "router",
-    "routing"
+    "routing",
+    "paths",
+    "client",
+    "browser"
   ],
+  "main": "dist/index.js",
+  "module": "index.mjs",
+  "unpkg": "dist/index.umd.js",
+  "files": [
+    "dist/index.js",
+    "index.mjs",
+    "dist/index.umd.js"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
+  "scripts": {
+    "bench": "node bench && node bench/trouter && node bench/wayfarer",
+    "lint": "semistandard --fix --verbose",
+    "build": "rollup -c rollup.config.js",
+    "check": "nyc --silent tape -r esm test/*.js | tap-spec && nyc report",
+    "prepack": "npm run lint && npm run build",
+    "test": "npm run lint && npm run check"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "lines": 100,
+    "statements": 100,
+    "functions": 100,
+    "branches": 100,
+    "extension": [
+      ".mjs"
+    ],
+    "include": [
+      "index.mjs"
+    ],
+    "exclude": [
+      "test/*.js"
+    ],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "cache": true,
+    "all": true
+  },
   "dependencies": {
-    "regexparam": "^1.3.0"
+    "regexparam": "1.3.0"
   },
   "devDependencies": {
-    "bundt": "0.4.0",
-    "esm": "3.2.22",
+    "@babel/core": "7.9.0",
+    "@babel/preset-env": "7.9.0",
+    "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-node-resolve": "7.1.1",
+    "babel-plugin-transform-modern-regexp": "0.0.6",
+    "esm": "3.2.25",
+    "nyc": "15.0.1",
+    "rollup": "2.2.0",
+    "rollup-plugin-babel": "4.4.0",
+    "rollup-plugin-clean": "1.0.0",
+    "rollup-plugin-terser": "5.3.0",
+    "semistandard": "14.2.0",
     "tap-spec": "5.0.0",
-    "tape": "4.11.0"
+    "tape": "4.13.2"
   }
 }
