--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: node_js
+notifications:
+  email: false
 node_js:
   - node
   - lts/*
   - 10
+after_success:
+  - npx codecov
+  - npx semantic-release
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
